# aramv0

./: .gitignore  Makefile.am  README.md  configure.ac  remake.sh
doxx/: aramv0.uxf  classdiagram.uxf
src/main/cc/: main.cc
src/main/cc/model/: helper.cc  helper.h  title.cc  title.h  track.cc  track.h
src/main/cc/service/: audio_engine.cc  audio_engine.h  buffer.cc  buffer.h  helper.cc  helper.h  jack_engine.cc  jack_engine.h  signal.cc  signal.h  silence_engine.cc  silence_engine.h  system.cc  system.h
src/test/cc/: main.cc
